--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit==1.8
 streamlit_drawable_canvas==0.8.0
 lovely-logger
 pandas
@@ -7,4 +7,4 @@ numpy
 scipy
 plotly
 shapely
-git+https://github.com/chraibi/hydralit.git
+hydralit
