--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -15,7 +15,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-    - run: python -m pip install --upgrade pip
+    - run: pip install --upgrade pip
     - run: pip install "black<23" pylint==v2.15.3 mypy==v0.982
     - name: Analysing the code with pylint, black and mypy
     - run: black --diff --check $(git ls-files '*.py')
