--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,23 +1,17 @@
-name: Pylint
-
-on: [push]
+name: Checks
+on: [pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+    name: Checks
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
     - uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+        python-version: 3.x
     - run: pip install --upgrade pip
     - run: pip install "black<23" pylint==v2.15.3 mypy==v0.982
-    - name: Analysing the code with pylint, black and mypy
     - run: black --diff --check $(git ls-files '*.py')
-    - run: pylint $(git ls-files '*.py')
+    - run: pylint --disable=all --enable=unused-import $(git ls-files '*.py')
     - run: mypy --strict $(git ls-files '*.py')
