--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -15,6 +15,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - run: pip install --upgrade pip
     - run: pip install "black<23" pylint==v3.0.0a3 mypy==v0.902
-    - run: black --diff --check $(git ls-files '*.py')
+    - run: black --diff $(git ls-files '*.py')
     - run: pylint --disable=all --enable=unused-import $(git ls-files '*.py')
     - run: mypy --strict $(git ls-files '*.py')
